@@ -12,13 +12,14 @@ import org.jetbrains.annotations.Nullable;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class HolderUtils {
 
     private static final ConcurrentHashMap<VersionedInfoHolderData, VersionedInfoHolderData.InfoHolderPart> bestInfoHolderPartCache = new ConcurrentHashMap<>();
 
-    public static boolean shouldRunHolder(InfoHolderData holderData) {
+    public static boolean shouldRunHolder(InfoHolderData holderData) throws VersionParsingException {
         String modId = holderData.getModId();
         Optional<ModContainer> modContainer = FabricLoader.getInstance().getModContainer(modId);
         if (modContainer.isEmpty()) return false;
@@ -27,7 +28,7 @@ public class HolderUtils {
     }
 
     @Nullable
-    public static VersionedInfoHolderData.InfoHolderPart getBestInfoHolderPart(VersionedInfoHolderData holderData) {
+    public static VersionedInfoHolderData.InfoHolderPart getBestInfoHolderPart(VersionedInfoHolderData holderData) throws VersionParsingException {
         VersionedInfoHolderData.InfoHolderPart cachedPart = bestInfoHolderPartCache.get(holderData);
         if (cachedPart != null) return cachedPart;
 
@@ -36,11 +37,19 @@ public class HolderUtils {
         if (modContainer.isEmpty()) return null;
         Version version = modContainer.get().getMetadata().getVersion();
 
-        for (VersionedInfoHolderData.InfoHolderPart holderPart : holderData.getVersionedInfoHolderParts()) {
+        List<VersionedInfoHolderData.InfoHolderPart> holderParts = holderData.getVersionedInfoHolderParts();
+        VersionedInfoHolderData.InfoHolderPart bestPart = null;
+        for (VersionedInfoHolderData.InfoHolderPart holderPart : holderParts) {
             if (VersionPredicate.parse(holderPart.versionPredicate()).test(version)) {
-                bestInfoHolderPartCache.put(holderData, holderPart);
-                return holderPart;
+                if (bestPart == null || holderPart.weight() > bestPart.weight()) {
+                    bestPart = holderPart;
+                }
             }
+        }
+
+        if (bestPart != null) {
+            bestInfoHolderPartCache.put(holderData, bestPart);
+            return bestPart;
         }
 
         return null;
@@ -50,12 +59,9 @@ public class HolderUtils {
                                                           VersionedInfoHolderData.InfoHolderPart holderPart) {
         return new InfoHolderData(
                 holderData.getTargetClassName(),
-                Stream.concat(
-                        holderData.getRedirectFields().stream(),
-                        holderPart.extraRedirectFields().stream()
-                ).toList(),
+                holderPart.extraRedirectFields().stream().collect(Collectors.toList()),
                 holderPart.versionPredicate(),
                 holderData.getModId()
         );
     }
-}
+                    }
